--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "dden",
-        "dnum"
+        "dnum",
+        "UNSORTEDDICTIONARY"
     ],
     "files.associations": {
         "*.embeddedhtml": "html",
