project2 done, project1 fixed

--- a/Projects/Project 2 - Fraction Calculator/code/Makefile
+++ b/Projects/Project 2 - Fraction Calculator/code/Makefile
@@ -7,7 +7,7 @@ all: $(PROJECT) clean
 $(PROJECT): $(PROJECT).o fraction.o
 	$(COPTIONS) -o $(PROJECT) $(PROJECT).o fraction.o
 
-$(PROJECT).o: $(PROJECT).cc fraction.h stack.cc stack.h
+$(PROJECT).o: $(PROJECT).cc fraction.h stack.cc stack.h dictionary.cc dictionary.h
 	$(COPTIONS) -c $(PROJECT).cc -o $(PROJECT).o
 
 fraction.o: fraction.cc fraction.h
